lang/src/ast/snapshots/rain_lang__ast__parser__test__ident_maths.snap
---
source: lang/src/ast2/parser.rs
expression: "parse_display_expr(\"a + b - c * d / e\")"
---
BinaryOp(
 BinaryOp(
  Ident(
   a
  )
  +
  Ident(
   b
  )
 )
 -
 BinaryOp(
  BinaryOp(
   Ident(
    c
   )
   *
   Ident(
    d
   )
  )
  /
  Ident(
   e
  )
 )
)
