lang/src/ast/snapshots/rain_lang__ast__parser__test__internal.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"internal._print(42)\")"
---
FnCall(
 BinaryOp(
  InternalLiteral(
  )
  .
  Ident(
   _print
  )
 )
 IntegerLiteral(
  42
 )
)
