lang/src/ast/snapshots/rain_lang__ast__parser__test__not_dot_plus_expr.snap
---
source: lang/src/ast/parser.rs
expression: "parse_display_expr(\"!a.b + d\")"
---
BinaryOp(
 Not(
  BinaryOp(
   Ident(
    a
   )
   .
   Ident(
    b
   )
  )
 )
 +
 Ident(
  d
 )
)
